--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
     <head>
         <title>Search</title>
         <link rel="stylesheet" type="text/css" href="styles/search.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     </head>
     <body>
-        <div class="nav"></div>
+        <div class="nav-tabs">
+            <ul class="nav d-inline-flex">
+                <li class="nav-item d-xxl-inline-flex justify-content-center align-items-center container" ><a class="nav-link" href="advanced-search.html">Adv Search</a></li>
+
+                <li class="nav-item d-xxl-inline-flex justify-content-center align-items-center container"><a class="nav-link" href="image-search.html">Image Search</a></li>
+            </ul>
+        </div>
 
         <div class="banner">
             <img class="googImg" src="static\google.jpg.jpg">
