--- a/index.html
+++ b/index.html
@@ -12,25 +12,21 @@
 
 
 
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">          <!--  Ensures responsive behaviour om mobile devices  -->
 
     <head>
         <title>Search</title>
-        <link rel="stylesheet" type="text/css" href="styles/search.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="styles/search.css">
     </head>
     <body>
-        <div class="nav-tabs">
-            <ul class="nav d-inline-flex">
-                <li class="nav-item d-xxl-inline-flex justify-content-center align-items-center container" ><a class="nav-link" href="advanced-search.html">Adv Search</a></li>
+        <div class="nav-tabs w-100 d-flex justify-content-center nav">
+            <ul class="d-flex w-25 h-100 justify-content-center">
+                <li class="nav-item w-25 h-auto d-flex justify-content-center align-items-center container" ><a class="nav-link" href="advanced-search.html">Adv Search</a></li>
 
-                <li class="nav-item d-xxl-inline-flex justify-content-center align-items-center container"><a class="nav-link" href="image-search.html">Image Search</a></li>
+                <li class="nav-item w-25 h-auto d-flex justify-content-center align-items-center container"><a class="nav-link" href="image-search.html">Image Search</a></li>
             </ul>
         </div>
 
@@ -44,6 +40,8 @@
                 <input type="submit" value="Google Search">
             </form>
         </div>
+
+        <script src=”https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js” integrity=”sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ” crossorigin=”anonymous”></script>
     </body>
 </html>
 
