--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <link rel="stylesheet" type="text/css" href="styles/search.css">
     </head>
     <body>
-        <div class="nav-tabs w-100 d-flex justify-content-center nav">
-            <ul class="d-flex w-25 h-100 justify-content-center">
+        <div class="nav-tabs w-100 d-flex justify-content-end nav">
+            <ul class="d-flex w-25 h-100 justify-content-end">
                 <li class="nav-item w-25 h-auto d-flex justify-content-center align-items-center container" ><a class="nav-link" href="advanced-search.html">Adv Search</a></li>
 
                 <li class="nav-item w-25 h-auto d-flex justify-content-center align-items-center container"><a class="nav-link" href="image-search.html">Image Search</a></li>
