--- a/advanced-search.html
+++ b/advanced-search.html
@@ -22,7 +22,11 @@
         <link rel="stylesheet" type="text/css" href="styles/search.css">
     </head>
     <body>
-        <div class="nav"></div>
+        <div class="nav-tabs w-100 d-flex justify-content-end nav">
+            <ul class="d-flex w-25 h-100 justify-content-end">
+                <li class="nav-item w-25 h-auto d-flex justify-content-center align-items-center container" ><a class="nav-link" href="index.html">Home</a></li>
+            </ul>
+        </div>
 
         <div class="banner">
             <img class="googImg" src="static\google.jpg.jpg">
