--- a/image-search.html
+++ b/image-search.html
@@ -22,35 +22,25 @@
         <link rel="stylesheet" type="text/css" href="styles/search.css">
     </head>
     <body>
-        <div class="nav"></div>
+        <div class="nav-tabs w-100 d-flex justify-content-end nav">
+            <ul class="d-flex w-25 h-100 justify-content-end">
+                <li class="nav-item w-25 h-auto d-flex justify-content-center align-items-center container" ><a class="nav-link" href="index.html">Home</a></li>
+            </ul>
+        </div>
 
         <div class="banner">
             <img class="googImg" src="static\google.jpg.jpg">
         </div>
 
         <div class="search">
+            <form class="forms" action="https://images.google.com/imghp">
+                <input type="text" name="q">
+                <!-- <input type="text" name="q" value aria-label="Search"> -->
+                <!-- <input type="hidden" > -->
+
+                <input type="hidden" name="search_type" value="images">
+                <input type="submit" value="Google Search">
+            </form>
         </div>
-
-        <script src=”https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js” integrity=”sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ” crossorigin=”anonymous”></script>
-    </body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ GBNUJ;/'~
+@:lK,M
