--- a/advanced-search.html
+++ b/advanced-search.html
@@ -29,20 +29,51 @@
         </div>
 
         <div class="banner">
+            <div>
+                <h2 class="title">Advanced Search</h2>
+            </div>
+
             <img class="googImg" src="static\google.jpg.jpg">
+
         </div>
 
-        <div class="search">
+        <div class="adv_search">
+
+            <form class="adv_forms" action="https://www.google.com/search">
+                <div class="adv">
+                    <p>all these words:</p>
+
+                    <input class="as_q" type="text" name="as_q">
+                </div>
+
+                <div class="adv">
+                    <p>this exact word or phrase:</p>
+
+                    <input class="as_epq" type="text" name="as_epq">
+                </div>
+
+                <div class="adv">
+                    <p>any of these words:</p>
+                
+                    <input class="as_oq" type="text" name="as_oq">
+                </div>
+
+                <div class="adv">
+                    <p>none of these words:</p>
+
+                    <input class="as_eq" type="text" name="as_eq">
+                </div>
+
+                <div class="adv_button_wrap">
+                    <input class="adv_submit_button" type="submit" value="Advanced Search">
+                </div>
+            </form>
 
         </div>
 
         <script src=”https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js” integrity=”sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ” crossorigin=”anonymous”></script>
     </body>
 </html>
-
-
-
-
 
 
 
