--- a/index.html
+++ b/index.html
@@ -31,13 +31,21 @@
         </div>
 
         <div class="banner">
+            <div>
+                <h2 class="title">Google Search</h2>
+            </div>
+
             <img class="googImg" src="static\google.jpg.jpg">
         </div>
 
         <div class="search">
             <form class="forms" action="https://www.google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
+                <input class="search_bar" type="text" name="q">
+
+                <div class="button_wrap">
+                    <input class="submit_button" type="submit" name="btnK" value="Google Search">
+                    <input class="submit_button" type="submit" name="btnI" value="I'm Feeling Lucky">
+                </div>
             </form>
         </div>
 
